Docker image updated

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: todo-app
-        image: trainwithshubham/django-todo:latest
+        image: dhairya137/django-todo:latest
         ports:
         - containerPort: 8000
 
